Change fatal errors to warnings - fix bug #15797

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@71408 c90b9560-bf6c-de11-be94-00142212c4b1